Fix overflow of songs on playlist and songs index

--- a/app/assets/stylesheets/album-detail.scss
+++ b/app/assets/stylesheets/album-detail.scss
@@ -49,8 +49,6 @@
     color: white;
     // float: left;
     position: relative;
-    overflow-y: scroll;
-    height: calc( 100% - 91px);
 }
 
 .tracklist-row {
